--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-pandas>=1.5
-sqlalchemy>=1.4
-requests>=2.25
+# Core libraries
+pandas>=1.5,<2.0
+sqlalchemy==1.4.46
+requests==2.31.0
+python-dotenv==1.0.1
+
+# Code quality tools
+black==23.11.0
+flake8==6.1.0
+
+# Cloud / Optional
+boto3==1.34.42   # AWS SDK for Python
